<resources>
    <string name="app_name">IoT3_PS_empty_bottle_bank</string>
    <string name="temp">"-"</string>

    <!--Login_Activity.xml-->>
    <string name="Login_tv_title">🤑PS공병은행🤑</string>
    <string name="Ligin_btn_Login">로그인</string>
    <string name="Ligin_btn_join">회원가입</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Main.xml-->
    <string name="gongji">대박 로또 이벤트 진행중(07.28~08.13)</string>


    <!--join.xml -->
    <string name="check_button">확인</string>
    <string name="join_btn">회원가입</string>
    <string name="join_back">취소</string>
    <string name="app_arg"> 아아아ㅏㅇ아ㅏㅏ아아아아앙 </string>
    <string name="underlined_text1">이건뭔데 그러나</string>
    <string name="app_arg2" />
    <string name="app_arg3" />
    <string name="btn_bobobo">보기</string>

    <string name="underlined_text"><u>보기</u></string>


    <!-- main_list_view -->

    <string name="main_list_tlt">구시청 무인공병 회수기</string>
    <string name="main_list_text1">상무지구</string>
    <string name="main_list_text2">회수상태 OK</string>
    <string name="main_list_text3">소주 / 맥주병 전용</string>
    <string name="main_list_text4">환급금 : 소주병 100원 / 맥주병 130원</string>


    <!-- Detail_Activity.xml-->
    <string name="Detail_tlt">PS무인회수기 상무지구점</string>
    <string name="Detail_text1">소주 / 맥주병전용</string>
    <string name="Detail_text2">환급금 정보</string>
    <string name="Detail_text3">소주병 100원</string>
    <string name="Detail_text4">맥주병 130원</string>
    <string name="Detail_btn_back">뒤로</string>
    <string name="Detail_bottle_set">  투입가능갯수</string>
    <string name="Detail_bottle_set_num">5</string>
    <string name="Detail_bottle_now">  현재공병갯수</string>
    <string name="Detail_bottle_now_num">15</string>
    <string name="Detail_care">📢 주의 사항 📢</string>
    <string name="Detail_content"> 현재 PS 무인 회수기는 소주병 / 맥주병전용입니다.
        \n이물질이 들어간 병 삽입은 삼가해주시기 바랍니다.
        \n소주 / 맥주병이 아닌 병은 인식이 불가 합니다.
        \n \n
    (주) PS공병은행 </string>
    <string name="Check_loc_btn">위치보기</string>


    <!-- event_list_view.xml-->
    <string name="envent_tlt">우리동네 공병왕 이벤트</string>
    <string name="envent_time">2021.03.18 ~ 2021.08.13</string>


    <!-- Bottle_king.xml -->
    <string name="bottle_king_round">1</string>
    <string name="bottle_king_id">홍진석</string>
    <string name="bottle_king_now">현재 갯수</string>
    <string name="bottle_king_score">120ECO</string>

    <!-- lotto.xml -->
    <string name="btn_lotto_participation">로또 참여</string>
    <string name="lotto_round">1회차</string>
    <string name="lotto_number">3,12,23,24,45,47</string>

    <!-- 여기는 스토어 및 이벤트 공용 -->

    <string name="my_event_name">홍진석</string>
    <string name="my_event_point">💳 500,000P</string>
    <string name="event_day">날짜</string>
    <string name="event_Content">내용</string>


    <!-- My_event_xml -->
    <string name="my_event_tlt">이벤트 사용내역 및 적립내역</string>

    <string name="event_Check">적립/사용</string>
    <string name="event_my_day">2021.07.28</string>
    <string name="event_my_Content">로또 이벤트 참여</string>
    <string name="event_my_point"> -5000 </string>


    <!-- S_my_store.xml-->
    <string name="s_my_store_tlt">스토어 사용내역</string>
    <string name="s_my_store_Check">사용</string>
    <string name="s_my_store_day">2021.02.20</string>
    <string name="s_my_store_content">쓰레기봉투구입</string>
    <string name="s_my_point">-1700</string>


    <!--Point_Check_Activity.xml-->
    <string name="s_my_point_Ck">금액</string>
    <string name="Point_Check_tlt">현재 적립 금액</string>
    <string name="Point_Ck_day">1999.02.20</string>
    <string name="Point_Ck_content">맥주병 Point 적립</string>
    <string name="Point_Ck_point">+120</string>

    <!-- my_info -->
    <string name="btn_reset">새로고침</string>

    <!--QR_main -->

    <string name="qr_text">현재 회수기의 대한 정보가 입력중입니다. \n 잠시만 기다려주시기 바랍니다.</string>


</resources>