<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_list_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/main_list_img"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sojo" />

    <TextView
        android:id="@+id/main_list_tlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/main_list_tlt"
        app:layout_constraintStart_toEndOf="@+id/main_list_img"
        app:layout_constraintTop_toTopOf="@+id/main_list_img" />

    <TextView
        android:id="@+id/main_list_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/main_list_text1"
        app:layout_constraintStart_toEndOf="@+id/main_list_img"
        app:layout_constraintTop_toBottomOf="@+id/main_list_tlt" />

    <TextView
        android:id="@+id/main_list_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/main_list_text2"
        app:layout_constraintBottom_toBottomOf="@+id/main_list_text1"
        app:layout_constraintStart_toEndOf="@+id/main_list_text1"
        app:layout_constraintTop_toTopOf="@+id/main_list_text1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/main_list_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/main_list_text3"
        app:layout_constraintBottom_toBottomOf="@+id/main_list_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_list_text2"
        app:layout_constraintTop_toTopOf="@+id/main_list_text2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/main_list_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/main_list_text4"
        app:layout_constraintBottom_toBottomOf="@+id/main_list_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toEndOf="@+id/main_list_img"
        app:layout_constraintTop_toBottomOf="@+id/main_list_text1"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>