<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_event_list_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/event_my_day"
        android:layout_width="73dp"
        android:layout_height="77dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/event_my_day"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_my_Content"
        android:layout_width="239dp"
        android:layout_height="77dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/event_my_Content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/event_my_day"
        app:layout_constraintStart_toEndOf="@+id/event_my_day"
        app:layout_constraintTop_toTopOf="@+id/event_my_day" />

    <TextView
        android:id="@+id/event_my_point"
        android:layout_width="92dp"
        android:layout_height="77dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/event_my_point"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/event_my_Content"
        app:layout_constraintStart_toEndOf="@+id/event_my_Content"
        app:layout_constraintTop_toTopOf="@+id/event_my_Content" />

</androidx.constraintlayout.widget.ConstraintLayout>