<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/S_store_list_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/S_my_store_day"
        android:layout_width="108dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:text="@string/s_my_store_day"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/S_my_store_content"
        android:layout_width="209dp"
        android:layout_height="82dp"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:text="@string/s_my_store_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/S_my_store_day"
        app:layout_constraintEnd_toStartOf="@+id/S_my_point"
        app:layout_constraintStart_toEndOf="@+id/S_my_store_day"
        app:layout_constraintTop_toTopOf="@+id/S_my_store_day" />

    <TextView
        android:id="@+id/S_my_point"
        android:layout_width="79dp"
        android:layout_height="76dp"
        android:layout_marginEnd="1dp"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/s_my_point"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/S_my_store_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/S_my_store_content" />

</androidx.constraintlayout.widget.ConstraintLayout>