<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".My_event_Activity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/my_event_tlt"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/nanana"
            android:gravity="center"
            android:text="@string/my_event_tlt"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/my_event_name"
            android:layout_width="130dp"
            android:layout_height="33dp"
            android:layout_marginStart="64dp"
            android:fontFamily="@font/nanana"
            android:gravity="center"
            android:text="@string/my_event_name"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/my_event_point"
            android:layout_width="158dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/nanana"
            android:gravity="center"
            android:text="@string/my_event_point"
            app:layout_constraintBottom_toBottomOf="@+id/my_event_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/my_event_name"
            app:layout_constraintTop_toTopOf="@+id/my_event_name"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout10"
        android:layout_width="409dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <LinearLayout
            android:layout_width="407dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/event_day"
                android:layout_width="73dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/nanana"
                android:gravity="center"
                android:text="@string/event_day"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/event_Content"
                android:layout_width="219dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/nanana"
                android:gravity="center"
                android:text="@string/event_Content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/s_my_store_Check"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/nanana"
                android:gravity="center"
                android:text="@string/event_Check"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/my_event_list_view_co"
        android:layout_width="409dp"
        android:layout_height="520dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nanana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout10" />

</androidx.constraintlayout.widget.ConstraintLayout>